# gelpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  config.in
include/: gel++.h
include/gel++/: DebugLine.h  File.h  Image.h  LittleDecoder.h  base.h
include/gel++/coffi/: File.h
include/gel++/dwarf/: DebugLine.h
include/gel++/elf/: ArchPlugin.h  DebugLine.h  DebugLineNumber.h  File.h  File32.h  File64.h  UnixBuilder.h  common.h  defs.h  defs64.h
include/gel++/pecoff/: File.h
samples/: bs-eabi.ppc  bs-linux.arm
src/: CMakeLists.txt  coffi_File.cpp  dwarf_DebugLine.cpp  elf_ArchPlugin.cpp  elf_DebugLine.cpp  elf_File.cpp  elf_File32.cpp  elf_File64.cpp  elf_UnixBuilder.cpp  elf_arm.cpp  gel_DebugLine.cpp  gel_File.cpp  gel_Image.cpp  gel_LittleDecoder.cpp  gel_Manager.cpp  pecoff_File.cpp
test/: run_tests.sh  simple2_ti_TMS320C28.c  simple2_ti_TMS320C28.obj.dis
